# jackal-plain-storage

./: .gitignore  optimize.sh  shell.nix
.cargo/: config
contracts/numbered-collection/: Cargo.toml
contracts/numbered-collection/src/: contract.rs  error.rs  lib.rs  state.rs
